# mu

./: Cargo.toml  README.md
mu/: Cargo.toml
mu/src/: main.rs  playlist.rs  queue.rs  settings.rs
mu_core/: Cargo.toml
mu_core/src/: db.rs  lib.rs  playlist.rs  settings.rs  vdb.rs
mu_gui/: Cargo.toml
mu_gui/src/: main.rs
mu_player/: Cargo.toml
mu_player/src/: lib.rs
