[package]
name = "mu"
version = "0.3.0"
edition = "2021"
authors = ["Bay"]
description = "A terminal music player"
repository = "https://github.com/zfphex/mu"
readme = "../README.md"
license = "CC0-1.0"
default-run = "mu"

[features]
profile = ["mu_core/profile"]
simd = ["mu_core/simd"]
info = [ "mini/info"]
warn = [ "mini/warn"]
error = [ "mini/error"]


[dependencies]
rayon = "1.7.0"
# mu_player = { version = "0.3.0", path = "../mu_player" }
# onmi = { git = "https://github.com/zfphex/onmi", version = "0.1.0" }
onmi = { version = "0.1.0", path = "../../onmi" }
mu_core = { version = "0.3.0", path = "../mu_core" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
winter = { version = "0.1.0", git = "https://github.com/zfphex/winter" }
# winter = { version = "0.1.0", path = "../../winter" }
