[package]
name = "mu"
version = "0.4.0"
edition = "2021"
authors = ["Bay"]
description = "A terminal music player"
repository = "https://github.com/zfphex/mu"
readme = "../README.md"
license = "CC0-1.0"
default-run = "mu"

[features]
profile = ["mu_core/profile"]
info = ["mini/info"]
warn = ["mini/warn"]
error = ["mini/error"]
simd = ["onmi/simd"]

[dependencies]
mu_core = { version = "0.4.0", path = "../mu_core" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
winter = { version = "0.1.0", git = "https://github.com/zfphex/winter" }
# winter = { version = "0.1.0", path = "../../winter" }
# onmi = { git = "https://github.com/zfphex/onmi", version = "0.1.0" }
onmi = { version = "0.1.0", path = "../../onmi"}
