[package]
name = "mu_core"
version = "0.4.0"
edition = "2021"

[features]
profile = ["mini/profile"]

[dependencies]
minbin = { git = "https://github.com/zfphex/minbin", version = "0.1.0" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
winwalk = { git = "https://github.com/zfphex/winwalk", version = "0.2.2" }
onmi = { git = "https://github.com/zfphex/onmi", version = "0.1.0" }
# onmi = { version = "0.1.0", path = "../../onmi"}
rayon = "1.7.0"
