[package]
name = "mu_gui"
version = "0.1.0"
edition = "2024"

[features]
profile = ["neoui/profile"]

[dependencies]
neoui = { version = "0.1.0", path = "../../../neoui" }
mu_core = { version = "0.4.0", path = "../mu_core" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
onmi = { version = "0.1.0", path = "../../onmi", features = ["simd"] }
# onmi = { git = "https://github.com/zfphex/onmi", version = "0.1.0" }

