[package]
name = "mu_player"
version = "0.3.0"
edition = "2021"
description = "Music playback library for mu"
repository = "https://github.com/zfphex/mu"
readme = "../README.md"
license = "CC0-1.0"

[lib]
name = "mu_player"
path = "src/lib.rs"

[features]
profile = ["mu_core/profile", "mini/profile"]
info = ["mini/info"]
warn = ["mini/warn"]
error = ["mini/error"]

[dependencies]
crossbeam-queue = "0.3.1"
mu_core = { version = "0.3.0", path = "../mu_core" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
ringbuf = "0.4.1"
symphonia = { version = "0.5.5", default-features = false, features = [
    "flac",
    "mp3",
    "ogg",
    "vorbis",
    "opt-simd",
] }
wasapi = { git = "https://github.com/zfphex/wasapi", version = "0.1.0" }
# wasapi = { version = "0.1.0", path = "../../wasapi" }
